install/webui/webui/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kluctl-webui
  namespace: kluctl-system
  labels:
    app: kluctl-webui
    k8slens-edit-resource-version: v1
    tier: frontend
  annotations:
    cert-manager.io/cluster-issuer: cert-manager-webhook-duckdns-staging
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure, http
    traefik.ingress.kubernetes.io/router.middlewares: authentik-forward@kubernetescrd
    traefik.ingress.kubernetes.io/router.tls: 'true'
status:
  loadBalancer: {}
spec:
  tls:
    - hosts:
        - kluctl-webui.dhop.duckdns.org
      secretName: stirling-tls-duckdns-secret-staging
  rules:
    - host: kluctl-webui.dhop.duckdns.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kluctl-webui
                port:
                  number: 8080
